rich the sidebar artsy blog

--- a/src/site/content/feeds/daily-blog.njk
+++ b/src/site/content/feeds/daily-blog.njk
@@ -42,9 +42,9 @@ tags:
             </div>
             <div class="masuk-article h-stack">
                 <div class="article-header w-stack">
-                <a href=""><h1 class="article-title">The Boring Show Recap their screenplay, potentials of rehearsal?</h1></a>
-                <p class="article-date">Jan 21, 2022</p>
-                <img class="article-cover" src="/images/feeds/seinfeld-cast.jpeg" />
+                    <a href=""><h1 class="article-title">The Boring Show Recap their screenplay, potentials of rehearsal?</h1></a>
+                    <p class="article-date">Jan 21, 2022</p>
+                    <img class="article-cover" src="/images/feeds/seinfeld-cast.jpeg" />
                 </div>
                 <div class="article-content region">
                     <p>After two years isolated, Elizabeth opened his first account and in three days, her daily subscribe grow 50%, with around one thousand subscribers</p>
@@ -57,11 +57,24 @@ tags:
         </div>
         <div class="side-masuk">
             <div class="side-section w-stack">
-                <h2>ABOUT US</h2>
-                <div id="about-box">
-                </div>
+                <h2>MOOD TODAY</h2>
+                <img src="https://d2w9rnfcy7mm78.cloudfront.net/9255892/original_23169540349ed95d8dd9bca791f4b6c2.gif?1603654329?bc=0" alt="HAPPINESS MOOD" />
             </div>
             <div class="side-section w-stack">
+                <h2>ABOUT US</h2>
+                <div id="about-box">
+                    <p>THANK YOU FOR VISITING THIS PAGE</p>
+                    <p>OUR HUMBLE BLOG ESTABLISHED SINCE 2021</p>
+                    <p>HERE'S THE INTRODUCTORY GIFT FOR YOU</p>
+                    <div id="gift-card">
+                        <h2>MYSTERIOUS COFFEE SHOP GIFT CARD</h2>
+                        <h2>-> -> -> -> -> -> -></h2>
+                        <h2>CODE: #MORNINGLEISURE</h2>
+                        <p>ONLY LUCKY ONE CAN GENERATE LOL</p>
+                    </div>
+                </div>
+            </div>
+            <div class="side-section edges w-stack">
                 <h2>CATEGORY</h2>
                 <ul role="list">
                     <li>NIHILIST</li>
@@ -85,7 +98,7 @@ tags:
     </div>
 </main>
 <footer class="masuk-layout-footer all-center region">
-    <p>Some Material Contents are respective for owners. Writings are the views from author. Masuk @ 2022</p>
+    <p>Some Material Contents are respective for owners. Writings are the views from author. SOSEET BLOG 2022</p>
 </footer>
 </div>
 </div>
