--- a/src/scss/pages/feeds/daily-blog.scss
+++ b/src/scss/pages/feeds/daily-blog.scss
@@ -78,7 +78,7 @@
 
 .masuk-article {
     margin-bottom: 4rem;
-    border-bottom: 2px dotted black;
+    border-bottom: 1px solid black;
 }
 
 .article-header {
@@ -98,11 +98,27 @@
         min-height: 300px;
         background-color: #e8642a;
         border-radius: 1rem;
+        padding: 1rem;
+        color: white;
+        text-align: left;
+
+        h2 {
+            text-align: left;
+        }
+
+        p, h2 {
+            margin-top: 0.5rem;
+        }
     }
 }
 
 .side-section {
-    border-bottom: 1px solid black;
+    border: 1px solid black;
+
+    li {
+        padding-bottom: 1rem;
+        border-bottom: 1px solid black;
+    }
 }
 
 .side-masuk ul {
