change artsy blog inside

--- a/src/site/content/feeds/daily-blog.njk
+++ b/src/site/content/feeds/daily-blog.njk
@@ -32,7 +32,7 @@ tags:
         <div class="masuk-posts">
             <div class="masuk-article w-stack">
                 <div class="article-header w-stack">
-                <a href=""><h1 class="article-title">Elizabeth Peyton pursue her online subscriptions. Fansonly in her first choice</h1></a>
+                <a href=""><h1 class="article-title">These film photographs give the vibes of Euphoria TV Series Behind-the-Scenes</h1></a>
                 <p class="article-date">Jan 21, 2022</p>
                 </div>
                 <div class="article-content region">
@@ -70,8 +70,8 @@ tags:
                         <h2>MYSTERIOUS COFFEE SHOP GIFT CARD</h2>
                         <h2>-> -> -> -> -> -> -></h2>
                         <h2>CODE: #MORNINGLEISURE</h2>
-                        <p>ONLY LUCKY ONE CAN GENERATE LOL</p>
                     </div>
+                    <p>ONLY LUCKY ONE CAN GENERATE LOL</p>
                 </div>
             </div>
             <div class="side-section edges w-stack">
