--- a/src/scss/pages/feeds/daily-blog.scss
+++ b/src/scss/pages/feeds/daily-blog.scss
@@ -9,11 +9,11 @@
     }
 
     h1 {
-        font-size: 18px;
+        font-size: 16px;
     }
 
     h2 {
-        font-size: 18px;
+        font-size: 16px;
         padding: 2rem;
         text-align: center;
     }
@@ -38,7 +38,7 @@
     }
 
     h2 {
-        font-size: 40px;
+        font-size: 36px;
         padding: 1rem;
     }
 }
@@ -53,6 +53,7 @@
 
     a {
         color: #f9f9f9;
+        font-size: 16px;
     }
 }
 
@@ -108,6 +109,11 @@
 
         p, h2 {
             margin-top: 0.5rem;
+        }
+
+        #gift-card {
+            background-color: #333333;
+            border-radius: 1rem;
         }
     }
 }
