getting fresh on lemon soda

--- a/src/site/content/feeds/fresh-lemon-soda.njk
+++ b/src/site/content/feeds/fresh-lemon-soda.njk
@@ -16,21 +16,53 @@ tags:
 <div id="lemon-page">
     <div id="lemon-container">
         <div class="lemon-board" id="lemon-banner">
-        <div id="lemon-banner-cover">
+        <div id="lemon-banner-animated">
+            <div id="lemon-banner-cover">
+                <div>
+                <ul id="lemon-lines">
+                <li><img src="/images/feeds/lemon-clip-1.png"></li>
+                <li><img src="/images/feeds/lemon-clip-1.png"></li>
+                </ul>
+                </div>
+            </div>
         </div>
         <div id="lemon-banner-inner">
+            <div id="lemon-heading">
             <h2>FRESH LEMON WITH SODA</h2>
+            <p>A HIGH SENSATION WITH FRESHNESS INSIDE YOUR LUNG</p>
+            </div>
         </div>
         </div>
         <div class="lemon-board" id="lemon-tagline">
-            <h2>ORIGINAL - HERBAL - LOW SUGAR -  EXTRA LEMON - ORIGINAL - HERBAL - LOW SUGAR -  EXTRA LEMON - ORIGINAL - HERBAL - LOW SUGAR -  EXTRA LEMON</h2>
+            <ul id="lemon-slogans">
+                <li><h2>ORIGINAL</h2></li>
+                <li><h2>HERBAL</h2></li>
+                <li><h2>LOW SUGAR</h2></li>
+                <li><h2>EXTRA LEMON</h2></li>
+                <li><h2>ORIGINAL</h2></li>
+                <li><h2>HERBAL</h2></li>
+                <li><h2>LOW SUGAR</h2></li>
+            </ul>
+            <ul id="lemon-slogans" aria-hidden="true">
+                <li><h2>ORIGINAL</h2></li>
+                <li><h2>HERBAL</h2></li>
+                <li><h2>LOW SUGAR</h2></li>
+                <li><h2>EXTRA LEMON</h2></li>
+                <li><h2>ORIGINAL</h2></li>
+                <li><h2>HERBAL</h2></li>
+                <li><h2>LOW SUGAR</h2></li>
+            </ul>
         </div>
         <div class="lemon-board" id="first-menu-lemon">
             <div class="lemon-sub" id="inside-lemon">
                 <h2>INSIDE FRESH LEMON</h2>
+                <div id="menu-inner" class="lemon-sub-inner">
+                </div>
             </div>
             <div class="lemon-sub" id="promo-lemon">
                 <h2>CLAIM YOUR VITAMIN C</h2>
+                <div id="promo-inner" class="lemon-sub-inner">
+                </div>
             </div>
         </div>
     </div>
