--- a/src/scss/feeds/fresh-lemon-soda.scss
+++ b/src/scss/feeds/fresh-lemon-soda.scss
@@ -1,8 +1,26 @@
 
+@keyframes scroll {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(calc(-100% - 1rem));
+    }
+  }
+
+
+  @keyframes scrollLemon {
+    0% {
+      transform: rotate(0);
+    }
+    100% {
+      transform: rotate(180deg);
+    }
+  }
 
 #lemon-page {
     min-height: 100vh;
-    background-color: #98dae9;
+    background: linear-gradient(#98dae9, #589ac6);
 }
 
 .lemon-board {
@@ -17,14 +35,40 @@
     min-height: 40vh;
     display: flex;
     padding: 0;
+    position: relative;
+    border-radius: 1rem;
+}
+
+#lemon-banner-animated {
+    width: 50%;
+    position: relative;
+    overflow: hidden;
 }
 
 #lemon-banner-cover {
-    background-color: white;
-    background-image: url('/images/feeds/lemon-clip-1.png');
-    background-repeat: repeat;
     background-size: 45px;
-    width: 50%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-color: #f8f2ab;
+
+    #lemon-lines {
+        display: flex;
+        min-width: 100%;
+        justify-content: space-around;
+        padding: 2rem;
+        // animation: scrollLemon 10s linear infinite;
+
+        img {
+            // border: 1px solid black;
+            border-radius: 10em;
+            animation: scrollLemon 5s linear infinite alternate;
+        }
+    }
+
+    li {
+        margin-top: 0;
+    }
 }
 
 #lemon-banner-inner {
@@ -32,6 +76,18 @@
     width: 50%;
     background-color: #176a57;
     border-radius: 1rem;
+
+    #lemon-heading {
+        color: #f8f2ab;
+        padding: 8em;
+        text-align: center;
+        font-weight: 400;
+
+        h2 {
+            font-weight: 400;
+            font-size: 36px;
+        }
+    }
 }
 
 #first-menu-lemon {
@@ -41,14 +97,61 @@
 
     #inside-lemon {
         border-right: 1px solid black;
+
+    }
+}
+
+#lemon-tagline {
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    gap: 1rem;
+}
+
+#lemon-slogans {
+    display: flex;
+    min-width: 100%;
+    justify-content: space-around;
+    animation: scroll 10s linear infinite;
+    gap: 1rem;
+
+    li {
+        margin-top: 0;
+        // background-color: #176a57;
+        border-radius: 1rem;
+        h2 {
+            font-weight: 400;
+        }
     }
 }
 
 .lemon-sub {
     padding: 1rem;
+
+    .lemon-sub-inner {
+        min-height: 30vh;
+        border: 1px solid black;
+        border-radius: 1rem;
+        margin-top: 1rem;
+    }
+
+    #menu-inner {
+        background: linear-gradient(#efe12f, #f8f2ab);
+    }
+
+    #promo-inner {
+        background: linear-gradient(rgb(13, 174, 86), rgb(235, 255, 81));
+    }
 }
 
 #inside-lemon, #promo-lemon {
     width: 50%;
     min-height: 40vh;
+    font-weight: 400;
+
+    h2 {
+        font-weight: 400;
+        text-align: center;
+        font-size: 2em;
+    }
 }
