--- a/src/site/content/feeds/fresh-lemon-soda.njk
+++ b/src/site/content/feeds/fresh-lemon-soda.njk
@@ -57,6 +57,14 @@ tags:
             <div class="lemon-sub" id="inside-lemon">
                 <h2>INSIDE FRESH LEMON</h2>
                 <div id="menu-inner" class="lemon-sub-inner">
+                    <ul id="list-ingredient">
+                        <li><h2>CARBONATED WATER</h2></li>
+                        <li><h2>PALM SUGAR</h2></li>
+                        <li><h2>CINCAU EXTRACT</h2></li>
+                        <li><h2>LEMON EXTTRACT</h2></li>
+                        <li><h2>GRAIN</h2></li>
+                        <li><h2>RICE EXTRACT</h2></li>
+                    </ul>
                 </div>
             </div>
             <div class="lemon-sub" id="promo-lemon">
