--- a/src/site/content/feeds/fresh-lemon-soda.njk
+++ b/src/site/content/feeds/fresh-lemon-soda.njk
@@ -30,6 +30,7 @@ tags:
             <div id="lemon-heading">
             <h2>FRESH LEMON WITH SODA</h2>
             <p>A HIGH SENSATION WITH FRESHNESS INSIDE YOUR LUNG</p>
+            <a id="beli-sekarang-link">BELI SEKARANG</a>
             </div>
         </div>
         </div>
@@ -57,20 +58,58 @@ tags:
             <div class="lemon-sub" id="inside-lemon">
                 <h2>INSIDE FRESH LEMON</h2>
                 <div id="menu-inner" class="lemon-sub-inner">
-                    <ul id="list-ingredient">
+                    <div class="sidebar">
+                    <div id="empty-yellow">
+                    </div>
+                    <div>
+                        <ul id="list-ingredient">
                         <li><h2>CARBONATED WATER</h2></li>
                         <li><h2>PALM SUGAR</h2></li>
                         <li><h2>CINCAU EXTRACT</h2></li>
                         <li><h2>LEMON EXTTRACT</h2></li>
                         <li><h2>GRAIN</h2></li>
                         <li><h2>RICE EXTRACT</h2></li>
-                    </ul>
+                        </ul>
+                        <ul id="list-ingredient" aria-hidden="true">
+                        <li><h2>CARBONATED WATER</h2></li>
+                        <li><h2>PALM SUGAR</h2></li>
+                        <li><h2>CINCAU EXTRACT</h2></li>
+                        <li><h2>LEMON EXTTRACT</h2></li>
+                        <li><h2>GRAIN</h2></li>
+                        <li><h2>RICE EXTRACT</h2></li>
+                        </ul>
+                    </div>
+                    </div>
                 </div>
             </div>
             <div class="lemon-sub" id="promo-lemon">
                 <h2>CLAIM YOUR VITAMIN C</h2>
                 <div id="promo-inner" class="lemon-sub-inner">
                 </div>
+            </div>
+        </div>
+        <div>
+            <div class="lemon-board">
+                <button id="buy-now-button">
+                    <div id="buynow-inner">
+                    <ul id="list-buynow-text" aria-hidden="true">
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                    </ul>
+                    <ul id="list-buynow-text">
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                        <li><h2>BELI SEKARANG</h2></li>
+                    </ul>
+                    </div>
+                </button>
             </div>
         </div>
     </div>
