--- a/src/scss/feeds/fresh-lemon-soda.scss
+++ b/src/scss/feeds/fresh-lemon-soda.scss
@@ -191,6 +191,7 @@
     display: flex;
     gap: 1rem;
     padding: 0.8rem;
+    background: linear-gradient(#faf9ee, #f27a52);
 }
 
 #lemon-slogans {
