--- a/src/site/_includes/layouts/index-page.njk
+++ b/src/site/_includes/layouts/index-page.njk
@@ -15,7 +15,7 @@ eleventyComputed:
             </div>
         </div>
     </div>
-    <div class="auto-grid" id="archive__collections">
+    <div class="" id="archive__collections">
         {% for feed in paged.elements %}
             {# {% set data = feed.data %} #}
 
