--- a/src/site/content/feeds/invitation-digital.njk
+++ b/src/site/content/feeds/invitation-digital.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 title: Indonesian Weeding Digital Invitation - Classic
-cover: "./src/images/feeds/weeding-invitation.jpg"
+cover: "/images/feeds/weeding-invitation.jpg"
 tags: 
     - feeds
     - flex
