--- a/src/site/content/feeds/daily-blog.njk
+++ b/src/site/content/feeds/daily-blog.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 title: Daily Artsy Blog with Sidebar
-cover: "/images/feeds/daily-fun-journal.png"
+cover: "https://assets.kurva.xyz/daily-fun-journal.png"
 tags: 
     - feeds
     - flex
