--- a/src/site/content/feeds/favorite-spots-pontianak.njk
+++ b/src/site/content/feeds/favorite-spots-pontianak.njk
@@ -1,7 +1,7 @@
 ---
 layout: 'layouts/landing-page'
 title: Favorite Spots of Pontianak Poster
-cover: "/images/feeds/your-journey-bill-pins.jpg"
+cover: "https://assets.kurva.xyz/your-journey-bill-pins.jpg"
 pageScripts:
     - '/js/experiments-page.js'
 styleScripts:
