--- a/src/site/content/feeds/fresh-lemon-soda.njk
+++ b/src/site/content/feeds/fresh-lemon-soda.njk
@@ -1,7 +1,7 @@
 ---
 layout: 'layouts/base'
 title: Fresh Lemon Soda Machine
-cover: "/images/feeds/fresh-lemon-store.png"
+cover: "https://assets.kurva.xyz/fresh-lemon-store.png"
 pageScripts:
     - '/js/experiments-page.js'
 styleScripts:
