--- a/src/site/_includes/partials/site-footer.njk
+++ b/src/site/_includes/partials/site-footer.njk
@@ -1,7 +1,7 @@
 
 
 <footer class="site-footer">
-    <div class="switcher region">
+    <div style="--region-space: 1rem;" class="switcher region">
         <div class="w-footer">
             <ul class="w-footer__linkbox-list">
                 <li>
