--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -1,9 +1,22 @@
 ---
 layout: layouts/base.njk
-title: Daily Artsy Blog with Sidebar
-cover: "https://assets.kurva.xyz/daily-fun-journal.png"
+title: Sentimen Rindu di Pagi Hari
+styleScripts:
+    - /css/sentimen-pagi.css
 tags: 
+    - feeds
     - flex
     - basic
     - in-progress
 ---
+
+<div id="sentimen-page">
+    <div id="sentimen__bg-img">
+        <img id="landscape-img" src="/images/feeds/sentimen-vibe-morning.JPG" />
+        <div id="sentimen__headline">
+            <h2>Apa yang merindukanmu di pagi hari?</h2>
+            <h1>Merindukan sentimen di samping kamu</h1>
+            <p>Kata kata ini disponsori oleh KICIKKU</p>
+        </div>
+    </div>
+</div>
