sentiment pagi poster

--- a/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
+++ b/src/site/content/feeds/sentimen-rindu-pagi-hari.njk
@@ -14,9 +14,11 @@ tags:
     <div id="sentimen__bg-img">
         <img id="landscape-img" src="/images/feeds/sentimen-vibe-morning.JPG" />
         <div id="sentimen__headline">
-            <h2>Apa yang merindukanmu di pagi hari?</h2>
-            <h1>Merindukan sentimen di samping kamu</h1>
-            <p>Kata kata ini disponsori oleh KICIKKU</p>
+            <div id="sentimen__inner-text">
+            <h2 id="sentimen__question">Apa yang merindukanmu di pagi hari?</h2>
+            <h1 id="sentimen__quote">Merindukan sentimen di samping kamu</h1>
+            <p id="sentimen__sponsor">Kata kata ini disponsori oleh KICIKKU</p>
+            </div>
         </div>
     </div>
 </div>
