--- a/src/scss/feeds/sentimen-pagi.scss
+++ b/src/scss/feeds/sentimen-pagi.scss
@@ -4,8 +4,46 @@
 
 }
 
+#sentimen__bg-img {
+    position: relative;
+}
+
 #landscape-img {
     width: 100%;
     max-height: 1080px;
     object-fit: cover;
+}
+
+#sentimen__headline {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#sentimen__inner-text {
+    display: flex;
+    justify-content: space-around;
+    padding: 8em;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+
+    h1, h2, p {
+        color: white;
+        text-align: center;
+        @include apply-utility('font', 'serif');
+        // text-shadow: -1px 0 black,0 1px black,1px 0 black,0 -1px black;
+    }
+}
+
+#sentimen__question {
+    font-size: 24px;
+}
+
+#sentimen__quote {
+    font-size: clamp(40px, 60px, 80px);
+    font-weight: 400;
 }
