--- a/src/scss/feeds/sentimen-pagi.scss
+++ b/src/scss/feeds/sentimen-pagi.scss
@@ -35,7 +35,7 @@
         color: white;
         text-align: center;
         @include apply-utility('font', 'serif');
-        // text-shadow: -1px 0 black,0 1px black,1px 0 black,0 -1px black;
+        text-shadow: -1px 0 black,0 1px black,1px 0 black,0 -1px black;
     }
 }
 
